...
            android:focusable="false"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInformation">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:textColor="@color/black"
                android:enabled="false"
                android:fontFamily="@font/abel"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectanglenameView"
            app:startIconDrawable="@drawable/dateofbirth"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:textColor="@color/black"
                android:hint="Date of Birth"
                android:textSize="16sp"
...
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="@+id/rectangledatebirthView"
            app:layout_constraintEnd_toEndOf="@+id/rectangledatebirthView"
            app:layout_constraintTop_toTopOf="@+id/rectangledatebirthView" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_signup1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerGender"
            app:startIconDrawable="@drawable/weight"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/abel"
                android:hint="Weight (kg)"
                android:inputType="numberDecimal"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangleweightView"
            app:startIconDrawable="@drawable/height"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:focusable="false"
                android:hint="Height (cm)"
                android:textColor="@color/black"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangleheightView"
            app:startIconDrawable="@drawable/waist"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWaist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:focusable="false"
...
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="@+id/rectanglewaistView"
            app:layout_constraintEnd_toEndOf="@+id/rectanglewaistView"
            app:layout_constraintTop_toTopOf="@+id/rectanglewaistView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rectangleallergyView"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_signup1"
            android:elevation="3dp"
            app:boxCornerRadiusBottomEnd="10dp"
...
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="3dp"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectanglediseaseView"
            app:startIconDrawable="@drawable/allergy"
            app:startIconTint="#FFC745">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAllergy"
                android:layout_width="match_parent"
...
