<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


    <ImageView
        android:id="@+id/picturebackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/profile_background_curve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>/>

    <FrameLayout
        android:id="@+id/cardAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_photo_profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/baseline_person_24"
            android:scaleType="centerCrop" />
    </FrameLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAddAvatar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="150dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardAvatar"
        app:layout_constraintBottom_toBottomOf="@+id/cardAvatar">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/baseline_edit_24"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nourimate"
        android:textSize="32sp"
        android:fontFamily="@font/concertone"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardAvatar"/>

    <TextView
        android:id="@+id/bmiResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Body Mass Index: "
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintBottom_toBottomOf="@+id/picturebackground"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        android:clickable="true"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_background_profile_with_shadow"
        style="@style/Widget.MaterialComponents.Button.Circle"
        app:iconPadding="0dp"
        android:insetTop="0dp"
        android:elevation="5dp"
        android:insetBottom="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:icon="@drawable/logout"
        android:clickable="true"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_background_profile_with_shadow"
        style="@style/Widget.MaterialComponents.Button.Circle"
        app:iconPadding="0dp"
        android:insetTop="0dp"
        android:elevation="3dp"
        android:insetBottom="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:clickable="true"
        android:text="Profile"
        app:cornerRadius="10dp"
        android:paddingStart="10dp"
        android:gravity="start|center_vertical"
        app:iconSize="40dp"
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/rectangle_signup1"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        app:icon="@drawable/profile"
        app:iconTint="@color/color34"
        app:iconGravity="textStart"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picturebackground"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:src="@drawable/expand_circle"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="@+id/profileButton"
        app:layout_constraintBottom_toBottomOf="@+id/profileButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:clickable="true"
        android:text="Account"
        app:cornerRadius="10dp"
        android:paddingStart="10dp"
        android:gravity="start|center_vertical"
        app:iconSize="40dp"
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/rectangle_signup1"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        app:icon="@drawable/accountsecurity"
        app:iconTint="@color/color34"
        app:iconGravity="textStart"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/accountIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:src="@drawable/expand_circle"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/accountButton"
        app:layout_constraintTop_toTopOf="@+id/accountButton"
        app:layout_constraintBottom_toBottomOf="@+id/accountButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:clickable="true"
        android:text="History"
        app:cornerRadius="10dp"
        android:paddingStart="12dp"
        android:gravity="start|center_vertical"
        app:iconSize="33dp"
        app:iconPadding="13dp"
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/rectangle_signup1"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        app:icon="@drawable/history"
        app:iconTint="@color/color34"
        app:iconGravity="textStart"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountButton"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/historyIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:src="@drawable/expand_circle"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/historyButton"
        app:layout_constraintTop_toTopOf="@+id/historyButton"
        app:layout_constraintBottom_toBottomOf="@+id/historyButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/communityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:clickable="true"
        android:text="Community"
        app:cornerRadius="10dp"
        android:paddingStart="12dp"
        android:gravity="start|center_vertical"
        app:iconSize="35dp"
        app:iconPadding="11dp"
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/rectangle_signup1"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        app:icon="@drawable/community"
        app:iconTint="@color/color34"
        app:iconGravity="textStart"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyButton"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/communityIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:src="@drawable/expand_circle"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/communityButton"
        app:layout_constraintTop_toTopOf="@+id/communityButton"
        app:layout_constraintBottom_toBottomOf="@+id/communityButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/faqButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:clickable="true"
        android:text="FAQ"
        app:cornerRadius="10dp"
        android:paddingStart="12dp"
        android:gravity="start|center_vertical"
        app:iconSize="33dp"
        app:iconPadding="13dp"
        android:textSize="16sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/rectangle_signup1"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        app:icon="@drawable/faq"
        app:iconTint="@color/color34"
        app:iconGravity="textStart"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/communityButton"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/faqIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:src="@drawable/expand_circle"
        android:elevation="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/faqButton"
        app:layout_constraintTop_toTopOf="@+id/faqButton"
        app:layout_constraintBottom_toBottomOf="@+id/faqButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>
