<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/historybackground">

    <ImageView
        android:id="@+id/wave_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/wave_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.2"/>

    <ImageView
        android:id="@+id/wave_profile_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:elevation="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/wave_profile_with_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1.2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@+id/rectanglesetting2ImageView"
        app:icon="@drawable/back"
        android:clickable="true"
        app:iconSize="25dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_background_profile_with_shadow"
        style="@style/Widget.MaterialComponents.Button.Circle"
        app:layout_constraintBottom_toBottomOf="@+id/wave_profile_shadow"
        app:iconPadding="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:elevation="10dp" />

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/alatsi"
        android:textColor="#F18300"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_profile_shadow"/>


<!--    <TextView-->
<!--        android:id="@+id/textViewThemes"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="@+id/spinnerThemes"-->
<!--        app:layout_constraintStart_toStartOf="@+id/spinnerThemes"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:text="Themes"-->
<!--        android:textSize="14sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:fontFamily="@font/alatsi"-->
<!--        android:elevation="7dp"/>-->

<!--    <Spinner-->
<!--        android:id="@+id/spinnerThemes"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="65dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:background="@drawable/rectangle_settings_with_shadow"-->
<!--        android:paddingTop="30dp"-->
<!--        android:paddingBottom="12dp"-->
<!--        android:paddingStart="8dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:elevation="3dp"-->
<!--        android:fontFamily="@font/abel"-->
<!--        android:textColor="@color/color41"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintWidth_percent="0.85"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/settingTextView"-->
<!--        android:spinnerMode="dropdown"-->
<!--        android:popupBackground="@drawable/rectangle_signup1"/>-->


<!--    <ImageView-->
<!--        android:id="@+id/iconthemesImageView"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:padding="12dp"-->
<!--        android:elevation="8dp"-->
<!--        app:layout_constraintEnd_toEndOf="@id/spinnerThemes"-->
<!--        app:layout_constraintTop_toTopOf="@id/spinnerThemes"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/spinnerThemes"-->
<!--        android:src="@drawable/arrow_drop" />-->

    <ImageView
        android:id="@+id/rectanglesetting2ImageView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/rectangle_settings_with_shadow"
        android:elevation="7dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textViewNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notification"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/alatsi"
        app:layout_constraintTop_toTopOf="@+id/rectanglesetting2ImageView"
        app:layout_constraintStart_toStartOf="@+id/rectanglesetting2ImageView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:elevation="7dp"/>

    <Switch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotification"
        app:layout_constraintStart_toStartOf="@+id/textViewNotification"
        android:layout_marginTop="5dp"
        android:elevation="7dp"/>

    <ImageView
        android:id="@+id/rectanglesetting3ImageView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/rectangle_settings_with_shadow"
        android:elevation="7dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectanglesetting2ImageView"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewRecipePreferencesRecipeTransition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Transition When Selecting Recipe"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/alatsi"
        app:layout_constraintTop_toTopOf="@+id/rectanglesetting3ImageView"
        app:layout_constraintStart_toStartOf="@+id/rectanglesetting2ImageView"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:elevation="7dp"/>

    <Switch
        android:id="@+id/switchPreferencesRecipeTransition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        app:layout_constraintStart_toStartOf="@+id/textViewRecipePreferencesRecipeTransition"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecipePreferencesRecipeTransition" />


</androidx.constraintlayout.widget.ConstraintLayout>