...
        app:endIconTint="#FFD689"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditAccount">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColor="@color/black"
            android:fontFamily="@font/zenkakugothicnewbold"
            android:inputType="textEmailAddress"
...
        app:endIconTint="#FFD689"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmaileditInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:textColor="@color/black"
            android:fontFamily="@font/zenkakugothicnewbold"
            android:inputType="phone"
...
